# modules-playground

./: ApplicationModule.ixx  CMakeLists.txt  build.sh  create_window.cppm  main.cpp
core/: CMakeLists.txt
editor/: CMakeLists.txt  editor.cpp
game/: CMakeLists.txt
game/include/: game.h
game/src/: game.cpp
glue/: CMakeLists.txt  main.cpp
src/: EditorApplication.ixx  WebgpuThingOLD.ixx  main.cpp
